Revise games and media sections in index.html
Updated the content and categories for games and media sections.

--- a/index.html
+++ b/index.html
@@ -302,13 +302,12 @@
         </div>
         
         <div class="expandable-box">
-            <div class="box-header" onclick="toggleBox('stuff')">Stuff</div>
-            <div id="stuff" class="box-content">
+            <div class="box-header" onclick="toggleBox('games')">Games</div>
+            <div id="games" class="box-content">
                 <div class="box-content-inner">
-                    Here is some random things that I enjoy:
+                    Here are some games I enjoy:
                     <ul>
-                        <li class="category">Games:</li>
-                        <li class="category">    Roblox</li>
+                        <li class="category">Roblox</li>
                         <li>        <a href="https://www.roblox.com/games/71895508397153/" target="_blank" class="game-link">Die of Death</a></li>
                         <li>        <a href="https://www.roblox.com/games/7138009149/" target="_blank" class="game-link">Phighting</a></li>
                         <li>        <a href="https://www.roblox.com/games/18687417158/" target="_blank" class="game-link">Forsaken</a></li>
@@ -317,29 +316,38 @@
                         <li>        <a href="https://www.roblox.com/games/6403373529/" target="_blank" class="game-link">Slap Battles</a></li>
                         <li>        <a href="https://www.roblox.com/games/78515341506665/" target="_blank" class="game-link">Alter Ego</a></li>
                         <li>        <a href="https://www.roblox.com/games/16483433878/" target="_blank" class="game-link">Block Tales</a></li>
-                        <li class="category">    Steam</li>
+                        <li class="category">Steam</li>
                         <li>        <a href="https://store.steampowered.com/app/960090/Bloons_TD_6/" target="_blank" class="game-link">Bloons Tower Defense 6</a></li>
                         <li>        <a href="https://store.steampowered.com/app/553850/HELLDIVERS_2/" target="_blank" class="game-link">Helldivers 2</a></li>
                         <li>        <a href="https://store.steampowered.com/app/105600/Terraria" target="_blank" class="game-link">Terraria</a></li>
                         <li>        <a href="https://store.steampowered.com/app/945360/Among_Us" target="_blank" class="game-link">Among Us</a></li>
-                        <li class="category">    Looking Forward To</li>
+                        <li class="category">Looking Forward To</li>
                         <li>        <a href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong" target="_blank" class="game-link">Hollow Knight / Silksong</a></li>
                         <li>        <a href="https://www.youtube.com/watch?v=HTs0s6urogA" target="_blank" class="game-link">Give Me Your Best! [UNRELEASED]</a></li>
-                        <li></li>
-                        <li class="category">Media:</li>
-                        <li class="category">    Shows</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="expandable-box">
+            <div class="box-header" onclick="toggleBox('media')">Media</div>
+            <div id="media" class="box-content">
+                <div class="box-content-inner">
+                    Here is some media I enjoy:
+                    <ul>
+                        <li class="category">Shows</li>
                         <li>        <a href="https://www.paramountplus.com/shows/dexter/" target="_blank" class="game-link">Dexter</a></li>
                         <li>        <a href="https://www.paramountplus.com/shows/dexter-new-blood/" target="_blank" class="game-link">Dexter: New Blood</a></li>
                         <li>        <a href="https://www.paramountplus.com/shows/dexter-original-sin/" target="_blank" class="game-link">Dexter: Original Sin</a></li>
                         <li>        <a href="https://www.paramountplus.com/shows/dexter-resurrection/" target="_blank" class="game-link">Dexter: Ressurrection</a></li>
-                        <li>        <a href="https://www.adultswim.com/videos/rick-and-morty" target="_blank" class="game-link">Rick and Morty</a></li>
+                        <li>        <a href="https://www.youtube.com/watch?v=nBnW5TIg31Q" target="_blank" class="game-link">Rick and Morty</a></li>
                         <li>        <a href="https://www.disneyplus.com/browse/entity-8f8c5cbb-e5ba-4285-9e2c-86abcac9fd50" target="_blank" class="game-link">LOKI</a></li>
                         <li>        <a href="https://www.amazon.com/INVINCIBLE-SEASON-1/dp/B08WJN83XZ" target="_blank" class="game-link">Invincible</a></li>
-                        <li class="category">    Movies</li>
+                        <li class="category">Movies</li>
                         <li>        <a href="https://www.netflix.com/title/70305903" target="_blank" class="game-link">Interstellar</a></li>
                         <li>        <a href="https://www.netflix.com/title/11819086" target="_blank" class="game-link">The Truman Show</a></li>
                         <li>        <a href="https://www.disneyplus.com/browse/entity-9a136e06-852a-41bf-b71d-fa061cb43225" target="_blank" class="game-link">Avengers: Infinity War</a></li>
-                        <li class="category">    Looking Forward To</li>
+                        <li class="category">Looking Forward To</li>
                         <li>        <a href="https://www.netflix.com/title/70241956" target="_blank" class="game-link">Hannibal</a></li>
                     </ul>
                 </div>
