Refactor launch guard to use token validation
Updated the launch guard to use a token system for access control, ensuring the game can only be launched from the terminal with a valid token.

--- a/clicker.html
+++ b/clicker.html
@@ -154,16 +154,25 @@
 
 <script>
   // filepath: c:\Users\ginge\Downloads\clicker.html
-  // admin guard: redirect to index if not launched from terminal
+  // launch-token guard: only allow if launched from terminal (short-lived token)
   (function(){
     try {
-      if (sessionStorage.getItem('launch_clicker') !== '1') {
-        alert('Access denied. Launch the Clicker from the terminal on the homepage.');
+      const params = new URLSearchParams(window.location.search);
+      const token = params.get('lt');
+      const stored = sessionStorage.getItem('alpha_launch_token');
+      const expiry = parseInt(sessionStorage.getItem('alpha_launch_expiry') || '0', 10);
+      if (!token || !stored || token !== stored || Date.now() > expiry) {
+        alert('Access denied. Game must be launched from the terminal.');
         window.location.href = 'index.html';
         return;
       }
-      // consume the one-time launch flag
-      sessionStorage.removeItem('launch_clicker');
+      // consume token so it can't be reused
+      sessionStorage.removeItem('alpha_launch_token');
+      sessionStorage.removeItem('alpha_launch_expiry');
+      // remove token param from URL without reloading
+      const url = new URL(window.location);
+      url.searchParams.delete('lt');
+      window.history.replaceState({}, '', url.pathname + url.search + url.hash);
     } catch(e) {
       window.location.href = 'index.html';
       return;
