--- a/tetris.html
+++ b/tetris.html
@@ -264,6 +264,64 @@
   const FLASH_DURATION = 200;   // total flash time in ms
   const FLASH_INTERVAL = 80;    // toggle interval in ms
 
+  // Cursor tracking for distance-based grid outlines
+  const cursor = { x: Infinity, y: Infinity };
+  const GRID_FADE_RADIUS = 200; // px
+
+  // pointer events to track cursor position relative to canvas
+  canvas.addEventListener('pointermove', (ev) => {
+      const rect = canvas.getBoundingClientRect();
+      cursor.x = ev.clientX - rect.left;
+      cursor.y = ev.clientY - rect.top;
+  });
+  canvas.addEventListener('pointerleave', () => {
+      cursor.x = Infinity;
+      cursor.y = Infinity;
+  });
+
+  // helper: rounded rect path
+  function roundRectPath(x, y, w, h, r) {
+      const rad = Math.min(r, w / 2, h / 2);
+      ctx.beginPath();
+      ctx.moveTo(x + rad, y);
+      ctx.arcTo(x + w, y, x + w, y + h, rad);
+      ctx.arcTo(x + w, y + h, x, y + h, rad);
+      ctx.arcTo(x, y + h, x, y, rad);
+      ctx.arcTo(x, y, x + w, y, rad);
+      ctx.closePath();
+  }
+
+  // draw a single block with rounded corners and distance-based outline alpha
+  function drawBlock(x, y, v) {
+      const px = (x) * 24;
+      const py = (y) * 24;
+      const w = 24, h = 24;
+      // fill
+      ctx.fillStyle = colors[v];
+      roundRectPath(px + 0.5, py + 0.5, w - 1, h - 1, 4);
+      ctx.fill();
+
+      // compute distance from block center to cursor (in canvas pixels)
+      if (isFinite(cursor.x) && isFinite(cursor.y)) {
+          const cx = px + w / 2;
+          const cy = py + h / 2;
+          const dx = cx - cursor.x;
+          const dy = cy - cursor.y;
+          const dist = Math.sqrt(dx * dx + dy * dy);
+          // transparency mapping: at center = 0.5 opacity, at radius = 0 opacity
+          const max = GRID_FADE_RADIUS;
+          let outlineOpacity = 0.5 * Math.max(0, 1 - dist / max);
+          if (outlineOpacity > 0) {
+              ctx.save();
+              ctx.lineWidth = 0.6; // thinner grid
+              ctx.strokeStyle = `rgba(17,17,17,${outlineOpacity.toFixed(3)})`;
+              roundRectPath(px + 0.5, py + 0.5, w - 1, h - 1, 4);
+              ctx.stroke();
+              ctx.restore();
+          }
+      }
+  }
+
   function collide(arena, player) {
       const m = player.matrix;
       const o = player.pos;
@@ -405,10 +463,7 @@
       matrix.forEach((row, y) => {
           row.forEach((v, x) => {
               if (v !== 0) {
-                  ctx.fillStyle = colors[v];
-                  ctx.fillRect((x + offset.x) * 24, (y + offset.y) * 24, 24, 24);
-                  ctx.strokeStyle = '#111';
-                  ctx.strokeRect((x + offset.x) * 24, (y + offset.y) * 24, 24, 24);
+                  drawBlock(x + offset.x, y + offset.y, v);
               }
           });
       });
@@ -504,6 +559,12 @@
           return;
       }
 
+      // When paused, only allow pause toggle and escape
+      if (paused && k !== 'p' && k !== 'escape') {
+          e.preventDefault();
+          return;
+      }
+
       if (k === 'a') { e.preventDefault(); playerMove(-1); }
       else if (k === 'd') { e.preventDefault(); playerMove(1); }
       else if (k === 's') { e.preventDefault(); playerDrop(); }
@@ -540,6 +601,8 @@
               const act = btn.getAttribute('data-action');
               // Ignore touch actions during flash except Back
               if (flashingRows.length && act !== 'back') return;
+              // When paused, only allow pause toggle and back
+              if (paused && act !== 'pause' && act !== 'back') return;
               if (actions[act]) actions[act]();
           }, { passive: true });
       });
